--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <version>42.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version> <!-- Gunakan versi terbaru -->
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
